--- a/pitomba/pitomba.vcxproj.filters
+++ b/pitomba/pitomba.vcxproj.filters
@@ -69,7 +69,7 @@
     <ClCompile Include="src\pitomba\Renderer\Sprite\Sprite.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\pitomba\Renderer\Texture\TextureManager.cpp">
+    <ClCompile Include="src\pitomba\Renderer\Texture\TextureContainer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -140,7 +140,7 @@
     <ClInclude Include="src\pitomba\Utils\UnorderedMapContainer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\pitomba\Renderer\Texture\TextureManager.h">
+    <ClInclude Include="src\pitomba\Renderer\Texture\TextureContainer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Sample\Ids\TextureIds.h">
@@ -179,7 +179,7 @@
     <ClInclude Include="src\pitomba\Utils\iLogger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\pitomba\Renderer\Texture\iTextureManager.h">
+    <ClInclude Include="src\pitomba\Renderer\Texture\iTextureDirProvider.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\pitomba\Utils\iLocator.h">
@@ -195,6 +195,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\pitomba\Utils\iContainer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\pitomba\Renderer\Texture\iTextureContainer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
