--- a/pitomba/pitomba.vcxproj
+++ b/pitomba/pitomba.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="src\pitomba\Renderer\MainWindow.cpp" />
     <ClCompile Include="src\pitomba\Renderer\Sprite\D3DSprite.cpp" />
     <ClCompile Include="src\pitomba\Renderer\Sprite\Sprite.cpp" />
+    <ClCompile Include="src\pitomba\Renderer\Sprite\SpriteAnimation.cpp" />
     <ClCompile Include="src\pitomba\Renderer\Texture\TextureContainer.cpp" />
     <ClCompile Include="src\pitomba\Utils\Rng.cpp" />
     <ClCompile Include="src\pitomba\Utils\Scheduler.cpp" />
@@ -194,6 +195,7 @@
     <ClInclude Include="src\pitomba\Renderer\Sprite\D3DSprite.h" />
     <ClInclude Include="src\pitomba\Renderer\Sprite\Sprite.h" />
     <ClInclude Include="src\pitomba\Renderer\Sprite\SpriteAlign.h" />
+    <ClInclude Include="src\pitomba\Renderer\Sprite\SpriteAnimation.h" />
     <ClInclude Include="src\pitomba\Renderer\Sprite\SpriteId.h" />
     <ClInclude Include="src\pitomba\Renderer\Texture\iTextureContainer.h" />
     <ClInclude Include="src\pitomba\Renderer\Texture\iTextureDirProvider.h" />
