--- a/pitomba/pitomba.vcxproj
+++ b/pitomba/pitomba.vcxproj
@@ -197,6 +197,7 @@
     <ClInclude Include="src\pitomba\Renderer\Sprite\SpriteAlign.h" />
     <ClInclude Include="src\pitomba\Renderer\Sprite\SpriteAnimation.h" />
     <ClInclude Include="src\pitomba\Renderer\Sprite\SpriteId.h" />
+    <ClInclude Include="src\pitomba\Renderer\Texture\iRenderableTexture.h" />
     <ClInclude Include="src\pitomba\Renderer\Texture\iTextureContainer.h" />
     <ClInclude Include="src\pitomba\Renderer\Texture\iTextureDirProvider.h" />
     <ClInclude Include="src\pitomba\Renderer\Texture\TextureContainer.h" />
