Add SpriteAnimation component

--- a/pitomba/pitomba.vcxproj
+++ b/pitomba/pitomba.vcxproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <ClCompile Include="src\pitomba\EventManager\Event.cpp" />
     <ClCompile Include="src\pitomba\EventManager\EventManager.cpp" />
+    <ClCompile Include="src\pitomba\GameObjects\Components\SpriteAnimationComponent.cpp" />
     <ClCompile Include="src\pitomba\GameObjects\Components\SpriteComponent.cpp" />
     <ClCompile Include="src\pitomba\GameObjects\GameObject.cpp" />
     <ClCompile Include="src\pitomba\Kernel\Kernel.cpp" />
@@ -177,6 +178,7 @@
     <ClInclude Include="src\pitomba\EventManager\iEventManager.h" />
     <ClInclude Include="src\pitomba\GameObjects\Component.h" />
     <ClInclude Include="src\pitomba\GameObjects\ComponentId.h" />
+    <ClInclude Include="src\pitomba\GameObjects\Components\SpriteAnimationComponent.h" />
     <ClInclude Include="src\pitomba\GameObjects\Components\SpriteComponent.h" />
     <ClInclude Include="src\pitomba\GameObjects\Components\TransformComponent.h" />
     <ClInclude Include="src\pitomba\GameObjects\GameObject.h" />
