--- a/pitomba/pitomba.vcxproj.filters
+++ b/pitomba/pitomba.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="src\pitomba\Input\D3DKeyboard.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\pitomba\Input\D3DMouse.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\pitomba\Utils\Logger.h">
@@ -261,6 +264,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\pitomba\Input\D3DKeyboard.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\pitomba\Input\iMouse.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\pitomba\Input\D3DMouse.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
